src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Application_Code__c</fullName>
        <label>Application Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity360_Business_Bucket__c</fullName>
        <label>Entity360 Business Bucket</label>
        <picklist>
            <picklistValues>
                <fullName>Payment Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Formation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Benefits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity360_Retail_Bucket__c</fullName>
        <label>Entity360 Retail Bucket</label>
        <picklist>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Product_Code__c</fullName>
        <label>External Product Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Text__c</fullName>
        <label>LOB(Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_MP__c</fullName>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Association Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBT@Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets - Corporate Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets - Equity - Mergers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets - Equity - Originations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets - Int. Rate Derivatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets - Lead Syndication Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets -Money Center(Franchise)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Finance - Asset Based Lending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Finance - Domestic Factoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Finance - Mort Warehouse Lending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Finance - Supply Chain Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Financece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FARR Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governmental Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandbridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Partnership (ADP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Finance (AFCO/CAFO/Prime Rate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement and Institutional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott and Stringfellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheffield</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProActiv_Mapping__c</fullName>
        <label>ProActiv Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCM_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RCM Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCM_Mapping__c</fullName>
        <externalId>true</externalId>
        <label>RCM Mapping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIS_Service_Product_Category__c</fullName>
        <label>RIS Service/Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Recordkeeping and Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Advisory Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic Contribution Arrangements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERISA Tech Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity/Fixed Blend Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philanthropic Administrative Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Custody</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Service Product Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>